// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPathFromContext() encodes path with punctuation 1`] = `
{
  "entity": {
    "bundle": "page",
    "canonical": "https://tests.next-drupal.org/en/path%26with%5Epunc%26in%24path",
    "id": "20",
    "langcode": "en",
    "path": "/en/path%26with%5Epunc%26in%24path",
    "type": "node",
    "uuid": "e4bbe727-14ee-44bc-a34a-14ce5c86a82e",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/page/e4bbe727-14ee-44bc-a34a-14ce5c86a82e",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--page",
  },
  "label": "Page with characters in path",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/path%26with%5Epunc%26in%24path",
}
`;

exports[`getResourceCollectionFromContext() fetches a resource collection 1`] = `
[
  {
    "id": "52837ad0-f218-46bd-a106-5710336b7053",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/52837ad0-f218-46bd-a106-5710336b7053?resourceVersion=id%3A20",
      },
    },
    "title": "Give it a go and grow your own herbs",
    "type": "node--article",
  },
  {
    "id": "3d5a7bca-5b4a-49ee-87d2-cbe313562903",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/3d5a7bca-5b4a-49ee-87d2-cbe313562903?resourceVersion=id%3A22",
      },
    },
    "title": "Dairy-free and delicious milk chocolate",
    "type": "node--article",
  },
  {
    "id": "a1ef61c9-ed15-4b6d-bba2-bf6e5141f961",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/a1ef61c9-ed15-4b6d-bba2-bf6e5141f961?resourceVersion=id%3A24",
      },
    },
    "title": "The real deal for supermarket savvy shopping",
    "type": "node--article",
  },
  {
    "id": "ac0b8b56-db8d-4322-9b1e-224f22083f0d",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/ac0b8b56-db8d-4322-9b1e-224f22083f0d?resourceVersion=id%3A26",
      },
    },
    "title": "The Umami guide to our favorite mushrooms",
    "type": "node--article",
  },
  {
    "id": "22874ecc-0443-441b-a3c9-3aa94d85b800",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/22874ecc-0443-441b-a3c9-3aa94d85b800?resourceVersion=id%3A28",
      },
    },
    "title": "Let's hear it for carrots",
    "type": "node--article",
  },
  {
    "id": "ec51b1de-f51e-4761-b061-aa2624e58b4a",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/ec51b1de-f51e-4761-b061-aa2624e58b4a?resourceVersion=id%3A30",
      },
    },
    "title": "Baking mishaps - our troubleshooting tips",
    "type": "node--article",
  },
  {
    "id": "d5b9ef80-c0aa-45ca-88e7-79c28abe5d50",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/d5b9ef80-c0aa-45ca-88e7-79c28abe5d50?resourceVersion=id%3A32",
      },
    },
    "title": "Skip the spirits with delicious mocktails",
    "type": "node--article",
  },
  {
    "id": "6c7c249f-cd1a-41d5-944b-b3bfce68b325",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/6c7c249f-cd1a-41d5-944b-b3bfce68b325?resourceVersion=id%3A34",
      },
    },
    "title": "Give your oatmeal the ultimate makeover",
    "type": "node--article",
  },
]
`;

exports[`getResourceCollectionFromContext() fetches a resource collection using locale 1`] = `
[
  {
    "id": "52837ad0-f218-46bd-a106-5710336b7053",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/52837ad0-f218-46bd-a106-5710336b7053?resourceVersion=id%3A20",
      },
    },
    "title": "Prueba y cultiva tus propias hierbas",
    "type": "node--article",
  },
  {
    "id": "3d5a7bca-5b4a-49ee-87d2-cbe313562903",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/3d5a7bca-5b4a-49ee-87d2-cbe313562903?resourceVersion=id%3A22",
      },
    },
    "title": "Delicioso chocolate sin lactosa",
    "type": "node--article",
  },
  {
    "id": "a1ef61c9-ed15-4b6d-bba2-bf6e5141f961",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/a1ef61c9-ed15-4b6d-bba2-bf6e5141f961?resourceVersion=id%3A24",
      },
    },
    "title": "El verdadero negocio para comprar en el supermercado",
    "type": "node--article",
  },
  {
    "id": "ac0b8b56-db8d-4322-9b1e-224f22083f0d",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/ac0b8b56-db8d-4322-9b1e-224f22083f0d?resourceVersion=id%3A26",
      },
    },
    "title": "Guía Umami de nuestras setas preferidas",
    "type": "node--article",
  },
  {
    "id": "22874ecc-0443-441b-a3c9-3aa94d85b800",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/22874ecc-0443-441b-a3c9-3aa94d85b800?resourceVersion=id%3A28",
      },
    },
    "title": "Un aplauso para las zanahorias",
    "type": "node--article",
  },
  {
    "id": "ec51b1de-f51e-4761-b061-aa2624e58b4a",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/ec51b1de-f51e-4761-b061-aa2624e58b4a?resourceVersion=id%3A30",
      },
    },
    "title": "Percances al hornear - nuestros consejos para solucionar los problemas",
    "type": "node--article",
  },
  {
    "id": "d5b9ef80-c0aa-45ca-88e7-79c28abe5d50",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/d5b9ef80-c0aa-45ca-88e7-79c28abe5d50?resourceVersion=id%3A32",
      },
    },
    "title": "Salta los espíritus con deliciosos cócteles sin alcohol",
    "type": "node--article",
  },
  {
    "id": "6c7c249f-cd1a-41d5-944b-b3bfce68b325",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/6c7c249f-cd1a-41d5-944b-b3bfce68b325?resourceVersion=id%3A34",
      },
    },
    "title": "Dale a tu avena el cambio de imagen definitivo",
    "type": "node--article",
  },
]
`;

exports[`getResourceCollectionFromContext() fetches raw data 1`] = `
{
  "data": [
    {
      "attributes": {
        "title": "Vegan chocolate and nut brownies",
      },
      "id": "7862d283-ece2-4ae1-8bef-865259f72315",
      "links": {
        "self": {
          "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/7862d283-ece2-4ae1-8bef-865259f72315?resourceVersion=id%3A4",
        },
      },
      "type": "node--recipe",
    },
    {
      "attributes": {
        "title": "Super easy vegetarian pasta bake",
      },
      "id": "8d4b237f-f6fe-4bb1-95ef-f9e3b3f9d6b7",
      "links": {
        "self": {
          "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/8d4b237f-f6fe-4bb1-95ef-f9e3b3f9d6b7?resourceVersion=id%3A6",
        },
      },
      "type": "node--recipe",
    },
  ],
  "jsonapi": {
    "meta": {
      "links": {
        "self": {
          "href": "http://jsonapi.org/format/1.0/",
        },
      },
    },
    "version": "1.0",
  },
  "links": {
    "next": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe?fields%5Bnode--recipe%5D=title&page%5Boffset%5D=2&page%5Blimit%5D=2",
    },
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe?fields%5Bnode--recipe%5D=title&page%5Blimit%5D=2",
    },
  },
}
`;

exports[`getResourceFromContext() accepts a translated path 1`] = `
{
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "path": {
    "alias": "/recipes/deep-mediterranean-quiche",
    "langcode": "en",
    "pid": 67,
  },
  "status": true,
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches a resource from context 1`] = `
{
  "changed": "2022-03-25T08:02:17+00:00",
  "content_translation_outdated": false,
  "content_translation_source": "und",
  "created": "2022-03-21T10:52:42+00:00",
  "default_langcode": true,
  "drupal_internal__nid": 1,
  "drupal_internal__vid": 37,
  "field_cooking_time": 30,
  "field_difficulty": "medium",
  "field_ingredients": [
    "For the pastry:",
    "280g plain flour",
    "140g butter",
    "Cold water",
    "For the filling:",
    "1 onion",
    "2 garlic cloves",
    "Half a courgette",
    "450ml soya milk",
    "500g grated parmesan",
    "2 eggs",
    "200g sun dried tomatoes",
    "100g feta",
  ],
  "field_media_image": {
    "id": "bbfe9d97-2da2-432b-a22c-0396c08e06ca",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 1,
    },
    "type": "media--image",
  },
  "field_number_of_servings": 8,
  "field_preparation_time": 40,
  "field_recipe_category": [
    {
      "id": "a6c02fe4-67bf-462c-90cb-32281a07efe4",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 31,
      },
      "type": "taxonomy_term--recipe_category",
    },
  ],
  "field_recipe_instruction": {
    "format": "basic_html",
    "processed": "<ol><li>Preheat the oven to 400°F/200°C. Starting with the pastry; rub the flour and butter together in a bowl until crumbling like breadcrumbs. Add water, a little at a time, until it forms a dough.</li>
<li>Roll out the pastry on a floured board and gently spread over your tin. Place in the fridge for 20 minutes before blind baking for a further 10.</li>
<li>Whilst the pastry is cooling, chop and gently cook the onions, garlic and courgette.</li>
<li>In a large bowl, add the soya milk, half the parmesan, and the eggs. Gently mix.</li>
<li>Once the pastry is cooked, spread the onions, garlic and sun dried tomatoes over the base and pour the eggs mix over. Sprinkle the remaining parmesan and careful lay the feta over the top. Bake for 30 minutes or until golden brown.</li>
</ol>",
    "value": "<ol>
	<li>Preheat the oven to 400°F/200°C. Starting with the pastry; rub the flour and butter together in a bowl until crumbling like breadcrumbs. Add water, a little at a time, until it forms a dough.</li>
	<li>Roll out the pastry on a floured board and gently spread over your tin. Place in the fridge for 20 minutes before blind baking for a further 10.</li>
	<li>Whilst the pastry is cooling, chop and gently cook the onions, garlic and courgette.</li>
	<li>In a large bowl, add the soya milk, half the parmesan, and the eggs. Gently mix.</li>
	<li>Once the pastry is cooked, spread the onions, garlic and sun dried tomatoes over the base and pour the eggs mix over. Sprinkle the remaining parmesan and careful lay the feta over the top. Bake for 30 minutes or until golden brown.</li>
</ol>
",
  },
  "field_summary": {
    "format": "basic_html",
    "processed": "<p>An Italian inspired quiche with sun dried tomatoes and courgette. A perfect light meal for a summer's day.</p>
",
    "value": "<p>An Italian inspired quiche with sun dried tomatoes and courgette. A perfect light meal for a summer's day.</p>
",
  },
  "field_tags": [
    {
      "id": "46258827-cfad-4813-99dc-287c4cb41117",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 22,
      },
      "type": "taxonomy_term--tags",
    },
    {
      "id": "f32a4d84-0568-4bfd-8be3-8217d36efb6d",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 13,
      },
      "type": "taxonomy_term--tags",
    },
  ],
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "langcode": "en",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "moderation_state": "published",
  "node_type": {
    "id": "9b70a287-cade-454f-be8b-dea7b9a37c7a",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": "recipe",
    },
    "type": "node_type--node_type",
  },
  "path": {
    "alias": "/recipes/deep-mediterranean-quiche",
    "langcode": "en",
    "pid": 67,
  },
  "promote": true,
  "relationshipNames": [
    "node_type",
    "revision_uid",
    "uid",
    "field_media_image",
    "field_recipe_category",
    "field_tags",
  ],
  "revision_log": null,
  "revision_timestamp": "2022-03-25T08:02:17+00:00",
  "revision_translation_affected": true,
  "revision_uid": {
    "id": "365cc7b5-ddc4-4b3b-939e-1494400aab4a",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 1,
    },
    "type": "user--user",
  },
  "status": true,
  "sticky": false,
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
  "uid": {
    "id": "9e4944e8-dd77-407a-8610-83e823b48b56",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 4,
    },
    "type": "user--user",
  },
}
`;

exports[`getResourceFromContext() fetches a resource from context using locale 1`] = `
{
  "field_cooking_time": 30,
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/es/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "title": "Quiche mediterráneo profundo",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches a resource from context with params 1`] = `
{
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches raw data 1`] = `
{
  "data": {
    "attributes": {
      "title": "Deep mediterranean quiche - edited",
    },
    "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
      },
    },
    "type": "node--recipe",
  },
  "jsonapi": {
    "meta": {
      "links": {
        "self": {
          "href": "http://jsonapi.org/format/1.0/",
        },
      },
    },
    "version": "1.0",
  },
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?fields%5Bnode--recipe%5D=title&resourceVersion=rel%3Alatest-version",
    },
  },
}
`;

exports[`getStaticPathsFromContext() returns static paths for multiple resource types from context 1`] = `
[
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "prueba-y-cultiva-tus-propias-hierbas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "delicioso-chocolate-sin-lactosa",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "el-verdadeo-negocio-para-comprar-en-el-supermercado",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "guia-umami-de-nuestras-setas-preferidas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "un-aplauso-para-las-zanahorias",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "percances-al-hornear-nuestros-consejos-para-solucionar-problemas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "salta-los-espiritus-con-deliciosos-cocteles-sin-alcohol",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "dale-a-tu-avena-el-cambio-de-imagen-definitivo",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "vegan-chocolate-and-nut-brownies",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "super-easy-vegetarian-pasta-bake",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "watercress-soup",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "victoria-sponge-cake",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "gluten-free-pizza",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "thai-green-curry",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "crema-catalana",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "fiery-chili-sauce",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "deep-mediterranean-quiche",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "bizcochos-veganos-de-chocolate-y-nueces",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pasta-vegetariana-horno-super-facil",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "sopa-de-berro",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pastel-victoria",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pizza-sin-gluten",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "curry-verde-tailandes",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "crema-catalana",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "salsa-de-chile-ardiente",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "quiche-mediterráneo-profundo",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context 1`] = `
[
  {
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context with locale 1`] = `
[
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "prueba-y-cultiva-tus-propias-hierbas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "delicioso-chocolate-sin-lactosa",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "el-verdadeo-negocio-para-comprar-en-el-supermercado",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "guia-umami-de-nuestras-setas-preferidas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "un-aplauso-para-las-zanahorias",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "percances-al-hornear-nuestros-consejos-para-solucionar-problemas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "salta-los-espiritus-con-deliciosos-cocteles-sin-alcohol",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "dale-a-tu-avena-el-cambio-de-imagen-definitivo",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context with params 1`] = `
[
  {
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
]
`;

exports[`translatePathFromContext() translates a path 1`] = `
{
  "entity": {
    "bundle": "recipe",
    "canonical": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
    "id": "1",
    "langcode": "en",
    "path": "/en/recipes/deep-mediterranean-quiche",
    "type": "node",
    "uuid": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--recipe",
  },
  "label": "Deep mediterranean quiche - edited",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
}
`;

exports[`translatePathFromContext() translates a path with pathPrefix 1`] = `
{
  "entity": {
    "bundle": "recipe",
    "canonical": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
    "id": "1",
    "langcode": "en",
    "path": "/en/recipes/deep-mediterranean-quiche",
    "type": "node",
    "uuid": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--recipe",
  },
  "label": "Deep mediterranean quiche - edited",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
}
`;

exports[`getPathFromContext() encodes path with punctuation 1`] = `
{
  "entity": {
    "bundle": "page",
    "canonical": "https://tests.next-drupal.org/en/path%26with%5Epunc%26in%24path",
    "id": "20",
    "langcode": "en",
    "path": "/en/path%26with%5Epunc%26in%24path",
    "type": "node",
    "uuid": "e4bbe727-14ee-44bc-a34a-14ce5c86a82e",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/page/e4bbe727-14ee-44bc-a34a-14ce5c86a82e",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--page",
  },
  "label": "Page with characters in path",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/path%26with%5Epunc%26in%24path",
}
`;

exports[`getResourceCollectionFromContext() fetches a resource collection 1`] = `
[
  {
    "id": "52837ad0-f218-46bd-a106-5710336b7053",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/52837ad0-f218-46bd-a106-5710336b7053?resourceVersion=id%3A20",
      },
    },
    "title": "Give it a go and grow your own herbs",
    "type": "node--article",
  },
  {
    "id": "3d5a7bca-5b4a-49ee-87d2-cbe313562903",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/3d5a7bca-5b4a-49ee-87d2-cbe313562903?resourceVersion=id%3A22",
      },
    },
    "title": "Dairy-free and delicious milk chocolate",
    "type": "node--article",
  },
  {
    "id": "a1ef61c9-ed15-4b6d-bba2-bf6e5141f961",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/a1ef61c9-ed15-4b6d-bba2-bf6e5141f961?resourceVersion=id%3A24",
      },
    },
    "title": "The real deal for supermarket savvy shopping",
    "type": "node--article",
  },
  {
    "id": "ac0b8b56-db8d-4322-9b1e-224f22083f0d",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/ac0b8b56-db8d-4322-9b1e-224f22083f0d?resourceVersion=id%3A26",
      },
    },
    "title": "The Umami guide to our favorite mushrooms",
    "type": "node--article",
  },
  {
    "id": "22874ecc-0443-441b-a3c9-3aa94d85b800",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/22874ecc-0443-441b-a3c9-3aa94d85b800?resourceVersion=id%3A28",
      },
    },
    "title": "Let's hear it for carrots",
    "type": "node--article",
  },
  {
    "id": "ec51b1de-f51e-4761-b061-aa2624e58b4a",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/ec51b1de-f51e-4761-b061-aa2624e58b4a?resourceVersion=id%3A30",
      },
    },
    "title": "Baking mishaps - our troubleshooting tips",
    "type": "node--article",
  },
  {
    "id": "d5b9ef80-c0aa-45ca-88e7-79c28abe5d50",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/d5b9ef80-c0aa-45ca-88e7-79c28abe5d50?resourceVersion=id%3A32",
      },
    },
    "title": "Skip the spirits with delicious mocktails",
    "type": "node--article",
  },
  {
    "id": "6c7c249f-cd1a-41d5-944b-b3bfce68b325",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/article/6c7c249f-cd1a-41d5-944b-b3bfce68b325?resourceVersion=id%3A34",
      },
    },
    "title": "Give your oatmeal the ultimate makeover",
    "type": "node--article",
  },
]
`;

exports[`getResourceCollectionFromContext() fetches a resource collection using locale 1`] = `
[
  {
    "id": "52837ad0-f218-46bd-a106-5710336b7053",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/52837ad0-f218-46bd-a106-5710336b7053?resourceVersion=id%3A20",
      },
    },
    "title": "Prueba y cultiva tus propias hierbas",
    "type": "node--article",
  },
  {
    "id": "3d5a7bca-5b4a-49ee-87d2-cbe313562903",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/3d5a7bca-5b4a-49ee-87d2-cbe313562903?resourceVersion=id%3A22",
      },
    },
    "title": "Delicioso chocolate sin lactosa",
    "type": "node--article",
  },
  {
    "id": "a1ef61c9-ed15-4b6d-bba2-bf6e5141f961",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/a1ef61c9-ed15-4b6d-bba2-bf6e5141f961?resourceVersion=id%3A24",
      },
    },
    "title": "El verdadero negocio para comprar en el supermercado",
    "type": "node--article",
  },
  {
    "id": "ac0b8b56-db8d-4322-9b1e-224f22083f0d",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/ac0b8b56-db8d-4322-9b1e-224f22083f0d?resourceVersion=id%3A26",
      },
    },
    "title": "Guía Umami de nuestras setas preferidas",
    "type": "node--article",
  },
  {
    "id": "22874ecc-0443-441b-a3c9-3aa94d85b800",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/22874ecc-0443-441b-a3c9-3aa94d85b800?resourceVersion=id%3A28",
      },
    },
    "title": "Un aplauso para las zanahorias",
    "type": "node--article",
  },
  {
    "id": "ec51b1de-f51e-4761-b061-aa2624e58b4a",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/ec51b1de-f51e-4761-b061-aa2624e58b4a?resourceVersion=id%3A30",
      },
    },
    "title": "Percances al hornear - nuestros consejos para solucionar los problemas",
    "type": "node--article",
  },
  {
    "id": "d5b9ef80-c0aa-45ca-88e7-79c28abe5d50",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/d5b9ef80-c0aa-45ca-88e7-79c28abe5d50?resourceVersion=id%3A32",
      },
    },
    "title": "Salta los espíritus con deliciosos cócteles sin alcohol",
    "type": "node--article",
  },
  {
    "id": "6c7c249f-cd1a-41d5-944b-b3bfce68b325",
    "langcode": "es",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/es/jsonapi/node/article/6c7c249f-cd1a-41d5-944b-b3bfce68b325?resourceVersion=id%3A34",
      },
    },
    "title": "Dale a tu avena el cambio de imagen definitivo",
    "type": "node--article",
  },
]
`;

exports[`getResourceCollectionFromContext() fetches raw data 1`] = `
{
  "data": [
    {
      "attributes": {
        "title": "Vegan chocolate and nut brownies",
      },
      "id": "7862d283-ece2-4ae1-8bef-865259f72315",
      "links": {
        "self": {
          "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/7862d283-ece2-4ae1-8bef-865259f72315?resourceVersion=id%3A4",
        },
      },
      "type": "node--recipe",
    },
    {
      "attributes": {
        "title": "Super easy vegetarian pasta bake",
      },
      "id": "8d4b237f-f6fe-4bb1-95ef-f9e3b3f9d6b7",
      "links": {
        "self": {
          "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/8d4b237f-f6fe-4bb1-95ef-f9e3b3f9d6b7?resourceVersion=id%3A6",
        },
      },
      "type": "node--recipe",
    },
  ],
  "jsonapi": {
    "meta": {
      "links": {
        "self": {
          "href": "http://jsonapi.org/format/1.0/",
        },
      },
    },
    "version": "1.0",
  },
  "links": {
    "next": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe?fields%5Bnode--recipe%5D=title&page%5Boffset%5D=2&page%5Blimit%5D=2",
    },
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe?fields%5Bnode--recipe%5D=title&page%5Blimit%5D=2",
    },
  },
}
`;

exports[`getResourceFromContext() accepts a translated path 1`] = `
{
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "path": {
    "alias": "/recipes/deep-mediterranean-quiche",
    "langcode": "en",
    "pid": 67,
  },
  "status": true,
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches a resource from context 1`] = `
{
  "changed": "2022-03-25T08:02:17+00:00",
  "content_translation_outdated": false,
  "content_translation_source": "und",
  "created": "2022-03-21T10:52:42+00:00",
  "default_langcode": true,
  "drupal_internal__nid": 1,
  "drupal_internal__vid": 37,
  "field_cooking_time": 30,
  "field_difficulty": "medium",
  "field_ingredients": [
    "For the pastry:",
    "280g plain flour",
    "140g butter",
    "Cold water",
    "For the filling:",
    "1 onion",
    "2 garlic cloves",
    "Half a courgette",
    "450ml soya milk",
    "500g grated parmesan",
    "2 eggs",
    "200g sun dried tomatoes",
    "100g feta",
  ],
  "field_media_image": {
    "id": "bbfe9d97-2da2-432b-a22c-0396c08e06ca",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 1,
    },
    "type": "media--image",
  },
  "field_number_of_servings": 8,
  "field_preparation_time": 40,
  "field_recipe_category": [
    {
      "id": "a6c02fe4-67bf-462c-90cb-32281a07efe4",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 31,
      },
      "type": "taxonomy_term--recipe_category",
    },
  ],
  "field_recipe_instruction": {
    "format": "basic_html",
    "processed": "<ol><li>Preheat the oven to 400°F/200°C. Starting with the pastry; rub the flour and butter together in a bowl until crumbling like breadcrumbs. Add water, a little at a time, until it forms a dough.</li>
<li>Roll out the pastry on a floured board and gently spread over your tin. Place in the fridge for 20 minutes before blind baking for a further 10.</li>
<li>Whilst the pastry is cooling, chop and gently cook the onions, garlic and courgette.</li>
<li>In a large bowl, add the soya milk, half the parmesan, and the eggs. Gently mix.</li>
<li>Once the pastry is cooked, spread the onions, garlic and sun dried tomatoes over the base and pour the eggs mix over. Sprinkle the remaining parmesan and careful lay the feta over the top. Bake for 30 minutes or until golden brown.</li>
</ol>",
    "value": "<ol>
	<li>Preheat the oven to 400°F/200°C. Starting with the pastry; rub the flour and butter together in a bowl until crumbling like breadcrumbs. Add water, a little at a time, until it forms a dough.</li>
	<li>Roll out the pastry on a floured board and gently spread over your tin. Place in the fridge for 20 minutes before blind baking for a further 10.</li>
	<li>Whilst the pastry is cooling, chop and gently cook the onions, garlic and courgette.</li>
	<li>In a large bowl, add the soya milk, half the parmesan, and the eggs. Gently mix.</li>
	<li>Once the pastry is cooked, spread the onions, garlic and sun dried tomatoes over the base and pour the eggs mix over. Sprinkle the remaining parmesan and careful lay the feta over the top. Bake for 30 minutes or until golden brown.</li>
</ol>
",
  },
  "field_summary": {
    "format": "basic_html",
    "processed": "<p>An Italian inspired quiche with sun dried tomatoes and courgette. A perfect light meal for a summer's day.</p>
",
    "value": "<p>An Italian inspired quiche with sun dried tomatoes and courgette. A perfect light meal for a summer's day.</p>
",
  },
  "field_tags": [
    {
      "id": "46258827-cfad-4813-99dc-287c4cb41117",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 22,
      },
      "type": "taxonomy_term--tags",
    },
    {
      "id": "f32a4d84-0568-4bfd-8be3-8217d36efb6d",
      "resourceIdObjMeta": {
        "drupal_internal__target_id": 13,
      },
      "type": "taxonomy_term--tags",
    },
  ],
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "langcode": "en",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "moderation_state": "published",
  "node_type": {
    "id": "9b70a287-cade-454f-be8b-dea7b9a37c7a",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": "recipe",
    },
    "type": "node_type--node_type",
  },
  "path": {
    "alias": "/recipes/deep-mediterranean-quiche",
    "langcode": "en",
    "pid": 67,
  },
  "promote": true,
  "relationshipNames": [
    "node_type",
    "revision_uid",
    "uid",
    "field_media_image",
    "field_recipe_category",
    "field_tags",
  ],
  "revision_log": null,
  "revision_timestamp": "2022-03-25T08:02:17+00:00",
  "revision_translation_affected": true,
  "revision_uid": {
    "id": "365cc7b5-ddc4-4b3b-939e-1494400aab4a",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 1,
    },
    "type": "user--user",
  },
  "status": true,
  "sticky": false,
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
  "uid": {
    "id": "9e4944e8-dd77-407a-8610-83e823b48b56",
    "resourceIdObjMeta": {
      "drupal_internal__target_id": 4,
    },
    "type": "user--user",
  },
}
`;

exports[`getResourceFromContext() fetches a resource from context using locale 1`] = `
{
  "field_cooking_time": 30,
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/es/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "title": "Quiche mediterráneo profundo",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches a resource from context with params 1`] = `
{
  "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
    },
  },
  "title": "Deep mediterranean quiche - edited",
  "type": "node--recipe",
}
`;

exports[`getResourceFromContext() fetches raw data 1`] = `
{
  "data": {
    "attributes": {
      "title": "Deep mediterranean quiche - edited",
    },
    "id": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "links": {
      "self": {
        "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?resourceVersion=id%3A37",
      },
    },
    "type": "node--recipe",
  },
  "jsonapi": {
    "meta": {
      "links": {
        "self": {
          "href": "http://jsonapi.org/format/1.0/",
        },
      },
    },
    "version": "1.0",
  },
  "links": {
    "self": {
      "href": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f?fields%5Bnode--recipe%5D=title&resourceVersion=rel%3Alatest-version",
    },
  },
}
`;

exports[`getStaticPathsFromContext() returns static paths for multiple resource types from context 1`] = `
[
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "prueba-y-cultiva-tus-propias-hierbas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "delicioso-chocolate-sin-lactosa",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "el-verdadeo-negocio-para-comprar-en-el-supermercado",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "guia-umami-de-nuestras-setas-preferidas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "un-aplauso-para-las-zanahorias",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "percances-al-hornear-nuestros-consejos-para-solucionar-problemas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "salta-los-espiritus-con-deliciosos-cocteles-sin-alcohol",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "dale-a-tu-avena-el-cambio-de-imagen-definitivo",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "vegan-chocolate-and-nut-brownies",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "super-easy-vegetarian-pasta-bake",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "watercress-soup",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "victoria-sponge-cake",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "gluten-free-pizza",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "thai-green-curry",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "crema-catalana",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "fiery-chili-sauce",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "recipes",
        "deep-mediterranean-quiche",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "bizcochos-veganos-de-chocolate-y-nueces",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pasta-vegetariana-horno-super-facil",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "sopa-de-berro",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pastel-victoria",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "pizza-sin-gluten",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "curry-verde-tailandes",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "crema-catalana",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "salsa-de-chile-ardiente",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "recipes",
        "quiche-mediterráneo-profundo",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context 1`] = `
[
  {
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context with locale 1`] = `
[
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "locale": "en",
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "prueba-y-cultiva-tus-propias-hierbas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "delicioso-chocolate-sin-lactosa",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "el-verdadeo-negocio-para-comprar-en-el-supermercado",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "guia-umami-de-nuestras-setas-preferidas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "un-aplauso-para-las-zanahorias",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "percances-al-hornear-nuestros-consejos-para-solucionar-problemas",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "salta-los-espiritus-con-deliciosos-cocteles-sin-alcohol",
      ],
    },
  },
  {
    "locale": "es",
    "params": {
      "slug": [
        "articles",
        "dale-a-tu-avena-el-cambio-de-imagen-definitivo",
      ],
    },
  },
]
`;

exports[`getStaticPathsFromContext() returns static paths from context with params 1`] = `
[
  {
    "params": {
      "slug": [
        "articles",
        "give-it-a-go-and-grow-your-own-herbs",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "dairy-free-and-delicious-milk-chocolate",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-real-deal-for-supermarket-savvy-shopping",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "the-umami-guide-to-our-favourite-mushrooms",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "lets-hear-it-for-carrots",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "baking-mishaps-our-troubleshooting-tips",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "skip-the-spirits-with-delicious-mocktails",
      ],
    },
  },
  {
    "params": {
      "slug": [
        "articles",
        "give-your-oatmeal-the-ultimate-makeover",
      ],
    },
  },
]
`;

exports[`translatePathFromContext() translates a path 1`] = `
{
  "entity": {
    "bundle": "recipe",
    "canonical": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
    "id": "1",
    "langcode": "en",
    "path": "/en/recipes/deep-mediterranean-quiche",
    "type": "node",
    "uuid": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--recipe",
  },
  "label": "Deep mediterranean quiche - edited",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
}
`;

exports[`translatePathFromContext() translates a path with pathPrefix 1`] = `
{
  "entity": {
    "bundle": "recipe",
    "canonical": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
    "id": "1",
    "langcode": "en",
    "path": "/en/recipes/deep-mediterranean-quiche",
    "type": "node",
    "uuid": "71e04ead-4cc7-416c-b9ca-60b635fdc50f",
  },
  "isHomePath": false,
  "jsonapi": {
    "basePath": "/en/jsonapi",
    "entryPoint": "https://tests.next-drupal.org/en/jsonapi",
    "individual": "https://tests.next-drupal.org/en/jsonapi/node/recipe/71e04ead-4cc7-416c-b9ca-60b635fdc50f",
    "pathPrefix": "en/jsonapi",
    "resourceName": "node--recipe",
  },
  "label": "Deep mediterranean quiche - edited",
  "meta": {
    "deprecated": {
      "jsonapi.pathPrefix": "This property has been deprecated and will be removed in the next version of Decoupled Router. Use basePath instead.",
    },
  },
  "resolved": "https://tests.next-drupal.org/en/recipes/deep-mediterranean-quiche",
}
`;
